MW4-72: Enable integration for all programs

--- a/src/dhis2-integration-edit/dhis2-integration-form.html
+++ b/src/dhis2-integration-edit/dhis2-integration-form.html
@@ -1,11 +1,11 @@
 <form id="integrationForm" ng-submit="vm.saveIntegration()" reload-form>
     <label for="program">{{'dhis2IntegrationEdit.program' | message}}</label>
+    <p class="note">{{'dhis2IntegrationEdit.program.description' | message}}</p>
     <select id="program" ng-model="vm.integration.programId"
-        ng-options="program.id as program.name for program in vm.programs"
-        required>
+        ng-options="program.id as program.name for program in vm.programs">
     </select>
     
-    <label for="period">{{'dhis2IntegrationEdit.schedule' | message}}</label>
+    <label for="period" class="is-required">{{'dhis2IntegrationEdit.schedule' | message}}</label>
     <openlmis-cron-selection ng-model="vm.integration.cronExpression" read-only="false" required/>
 
     <label for="description">{{'dhis2IntegrationEdit.description' | message}}</label>
