--- a/src/dhis2-integration-edit/dhis2-integration-form.html
+++ b/src/dhis2-integration-edit/dhis2-integration-form.html
@@ -10,10 +10,9 @@
 
     <label for="description">{{'dhis2IntegrationEdit.description' | message}}</label>
     <input id="description" type="text" ng-model="vm.integration.description"/>
-
     <label for="configuration">{{'dhis2IntegrationEdit.configuration' | message}}</label>
     <select id="configuration" ng-model="vm.integration.configuration"
-        ng-options="configuration as configuration.name for configuration in vm.configurations"
+        ng-options="configuration as configuration.name for configuration in vm.configurations track by configuration.id"
         required>
     </select>
 
