--- a/src/dhis2-execution-response-body/dhis2-execution-response-body.html
+++ b/src/dhis2-execution-response-body/dhis2-execution-response-body.html
@@ -5,7 +5,7 @@
                 <h1>{{'dhis2ExecutionList.responseBody' | message}}</h1>
             </div>
             <div class="modal-body">
-                <pre style="max-height: 80vh;">{{vm.execution.response.body | json}}</pre>
+                <pre style="max-height: 80vh;">{{vm.formatResponse()}}</pre>
             </div>
             <div class="modal-footer">
                 <button ng-click="vm.goToExecutionList(false)">{{'dhis2ExecutionList.cancel' | message}}</button>
