MW4-96: Move response status code to modal

--- a/src/dhis2-execution-list/dhis2-execution-list.html
+++ b/src/dhis2-execution-list/dhis2-execution-list.html
@@ -11,7 +11,7 @@
                 <th>{{'dhis2ExecutionList.relevantPeriod' | message}}</th>
                 <th>{{'dhis2ExecutionList.executedBy' | message}}</th>
                 <th>{{'dhis2ExecutionList.description' | message}}</th>
-                <th>{{'dhis2ExecutionList.result' | message}}</th>
+                <th>{{'dhis2ExecutionList.status' | message}}</th>
                 <th>{{'dhis2ExecutionList.actions' | message}}</th>
             </tr>
         </thead>
@@ -26,19 +26,7 @@
 
                 <td>{{execution.description}}</td>
 
-                <td>
-                    <ul class="list-unstyled">
-                        <li ng-if="execution.status">
-                            {{'dhis2ExecutionList.executionStatus' | message}}:
-                            {{ 'dhis2ExecutionList.executionStatus.' + execution.status | message}}
-                        </li>
-                        <li ng-if="execution.response && execution.response.statusCode">
-                            {{'dhis2ExecutionList.responseStatus' | message}}:
-                            {{ 'dhis2ExecutionList.responseStatus.' + execution.response.statusCode | message}}
-                            ({{execution.response.statusCode}})
-                        </li>
-                    </ul>
-                </td>
+                <td>{{ 'dhis2ExecutionList.executionStatus.' + execution.status | message}}</td>
                 <td>
                     <button ng-if="execution.response" class="primary" ui-sref='.responsebody({id: execution.id})'>{{'dhis2ExecutionList.showResponse' | message}}</button>
                     <button ng-if="execution.status != 'STARTED'" class="primary" ui-sref='.requestbody({id: execution.id})'>{{'dhis2ExecutionList.showRequest' | message}}</button>
