--- a/src/dhis2-execution-response-body/dhis2-execution-response-body.html
+++ b/src/dhis2-execution-response-body/dhis2-execution-response-body.html
@@ -5,6 +5,11 @@
                 <h1>{{'dhis2ExecutionList.responseBody' | message}}</h1>
             </div>
             <div class="modal-body">
+                <label>
+                    {{'dhis2ExecutionList.responseStatus' | message}}:
+                    {{ 'dhis2ExecutionList.responseStatus.' + vm.execution.response.statusCode | message}}
+                    ({{vm.execution.response.statusCode}})
+                </label>
                 <pre style="max-height: 80vh;">{{vm.formatResponse()}}</pre>
             </div>
             <div class="modal-footer">
