MW4-94 - fixed problem with missing errors

--- a/src/dhis2-integration-edit/dhis2-integration-form.html
+++ b/src/dhis2-integration-edit/dhis2-integration-form.html
@@ -6,7 +6,11 @@
     </select>
     
     <label for="period" class="is-required">{{'dhis2IntegrationEdit.schedule' | message}}</label>
-    <openlmis-cron-selection ng-model="vm.integration.cronExpression" read-only="false" required/>
+    <openlmis-cron-selection 
+        ng-required="true"
+        ng-disabled="false"
+        ng-model="vm.integration.cronExpression" 
+        read-only="false"/>
 
     <label for="description">{{'dhis2IntegrationEdit.description' | message}}</label>
     <input id="description" type="text" ng-model="vm.integration.description"/>
