MW4-129: Display execution queue

--- a/src/dhis2-execution-list/dhis2-execution-list.html
+++ b/src/dhis2-execution-list/dhis2-execution-list.html
@@ -1,5 +1,39 @@
+<button type="text" ng-click="vm.refreshPage()">{{'dhis2ExecutionList.refresh' | message}}</button>
+
 <section class="openlmis-table-container">
-    <button type="text" ng-click="vm.refreshPage()">{{'dhis2ExecutionList.refresh' | message}}</button>
+    <h2>{{'dhis2ExecutionList.queueItems' | message}}</h2>
+    <table>
+        <caption ng-if="!vm.queueItems || vm.queueItems.length === 0">
+            {{ 'dhis2ExecutionList.queueItems.isEmpty' | message }}
+        </caption>
+        <thead>
+            <tr>
+                <th popover="{{'dhis2ExecutionList.executionTime.description' | message}}" popover-trigger-area="element">
+                    {{'dhis2ExecutionList.executionTime' | message}}
+                </th>
+                <th>{{'dhis2ExecutionList.relevantPeriod' | message}}</th>
+                <th popover="{{'dhis2ExecutionList.requestedBy.description' | message}}" popover-trigger-area="element">
+                    {{'dhis2ExecutionList.requestedBy' | message}}
+                </th>
+                <th>{{'dhis2ExecutionList.description' | message}}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="queueItem in vm.queueItems">
+                <td>{{queueItem.executionTime | openlmisDatetime}}</td>
+                <td>{{vm.periods[queueItem.processingPeriodId].name}}</td>
+
+                <td ng-if="queueItem.userId">{{vm.showUser(vm.usersMap[queueItem.userId])}}</td>
+                <td ng-if="!queueItem.userId">{{'dhis2ExecutionList.executedBy.system' | message}}</td>
+
+                <td>{{queueItem.description}}</td>
+            </tr>
+        </tbody>
+    </table>
+</section>
+
+<section class="openlmis-table-container">
+    <h2>{{'dhis2ExecutionList.executionList' | message}}</h2>
     <table>
         <caption ng-if="!vm.executions || vm.executions.length === 0">
             {{'dhis2ExecutionList.noExecutions' | message}}
@@ -34,7 +68,5 @@
             </tr>
         </tbody>
     </table>
-    <openlmis-pagination
-        list="vm.executions"
-        paged-list="vm.items"/>
+    <openlmis-pagination list="vm.executions" paged-list="vm.items"/>
 </section>
